<resources>
    <string name="app_name">AlloHeroProject</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="connection">Connexion</string>
    <string name="mail">e-mail</string>
    <string name="phone_number">n°téléphone</string>
    <string name="address">Adresse</string>
    <string name="postal_code">Code Postal</string>
    <string name="city">Ville</string>
    <string name="siret">n°SIRET</string>
    <string name="birthdate">Date de naissance</string>
    <string name="lastname">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="association">Association</string>
    <string name="user">Utlisateur</string>
    <string name="non_inscrit">Vous n\'êtes pas encore inscrit ?</string>
    <string name="inscrit">Vous êtes déjà inscrit ?</string>
    <string name="heroes">Heros</string>
    <string name="assocations_to_help">Associations à aider</string>
    <string name="asks">Demandes en cours</string>
    <string name="email_test">TEST.TEST@GMAIL.COM</string>
    <string name="password_test">test</string>
    <string name="todo">TODO</string>
    <string name="close">X</string>
    <string name="retour"><![CDATA[<]]></string>
    <string name="distance">distance</string>
    <string name="association_name">Nom de l\'association</string>
    <string name="description">Description</string>
    <string name="register">Inscription</string>
    <string name="creation_date">Date de création</string>
    <string name="search">Rechercher</string>
    <string name="keywords">Mots clés</string>
    <string name="menu">Menu</string>
    <string name="disconnect">Déconnecter</string>
    <string name="association_search">Rechercher une association</string>
</resources>
