<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.UserSigninActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/association_association_signup"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textAllCaps="false"
            android:background="@color/Snow"/>

        <Button
            android:id="@+id/user_association_signup"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@color/FireBrick"
            android:text="@string/association"
            android:textAllCaps="true"
            android:textColor="@color/White"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#FE5303"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/mail_association_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/name_association_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/association_name"
        android:layout_gravity="center"
        android:inputType="text" />

    <EditText
        android:id="@+id/siret_association_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/siret"
        android:inputType="number" />

    <EditText
        android:id="@+id/creation_date_association_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/creation_date"
        android:layout_gravity="center"
        android:inputType="date" />

    <EditText
        android:id="@+id/phone_number_association_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_gravity="center"
        android:inputType="phone" />

    <EditText
        android:id="@+id/password_association_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password_association_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/register_button_association_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textColor="@color/White"
        android:background="@color/FireBrick"
        />

    <Button
        android:id="@+id/connect_button_association_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/Snow"
        android:text="@string/inscrit"
        android:textColor="@color/FireBrick"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp" />

</LinearLayout>