<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSigninActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/association_slide"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:background="@color/LightCoral"/>
        <Button
            android:id="@+id/user_slide"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/association"
            android:background="@color/Snow"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#FE5303"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:gravity="center"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:layout_marginTop="30dp"
        />

</LinearLayout>