<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSigninActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/association_association_signin"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:background="@color/Snow"/>
        <Button
            android:id="@+id/user_association_signin"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/association"
            android:background="@color/LightCoral"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#FE5303"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/username_association_signin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/password_association_signin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/connect_button_association_signin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:layout_marginTop="70dp"
        android:textColor="@color/White"
        android:background="@color/FireBrick"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/register_button_association_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/Snow"
        android:text="@string/non_inscrit"
        android:textColor="@color/FireBrick"
        android:textAllCaps="false"
        android:textSize="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>